# metronome-audio-to-midi

./: CMakeLists.txt  Makefile  README.md  metronome-audio-to-midi.c
.github/workflows/: build_cmake.yml
cmake/: FindJack.cmake
install-dependencies/: macos-latest.sh  ubuntu-latest.sh  windows-latest.ps1  windows-latest.sh
